@@ -42,6 +42,12 @@ charsets:<br>
  href="http://www.unicode.org/charts">http://www.unicode.org/charts</a>&gt;
 and &lt;<a href="http://www.czyborra.com/utf">http://www.czyborra.com/utf</a>&gt;<br>
 </p>
+<p><span style="font-style: italic;">Beware:</span>
+tifiles_transcode_varname_static returns varnames in the locale
+selected by tifiles_transcoding_set (UTF-8 usually). If you want to use
+varname for buidling filenames, you need to convert from UTF-8 to glib
+filename encoding. Take care !<br>
+</p>
 <p>==========[ List of entries ]==========<br>
 </p>
 <b></b>
